# peco_api

./: .travis.yml  Cargo.toml  README.md
config/: database.yml.travis
migrations/2018-11-26-083312_create_users/: up.sql
migrations/2018-11-26-090620_create_fixed_phrases/: down.sql  up.sql
migrations/2018-11-26-092155_create_send_emails/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/actions/: fixed_phras.rs  mod.rs  send_email.rs  user.rs
src/models/: fixed_phras.rs  mod.rs  send_email.rs  user.rs
