[package]
name = "peco_api"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
bcrypt = "0.1.0"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]
